--- a/Data-content-standards-doc.Rmd
+++ b/Data-content-standards-doc.Rmd
@@ -175,7 +175,8 @@ knitr::include_graphics(path="Output/fig.rankreviewdate.grank.png")
 figure.num<-figure.num+1
 ```
 
-## 8. Imperiled species (G1, G2, GH, Endangered, and Threatened) should have Element Occurrences throughout the range and with complete metadata
+# Imperiled species (G1, G2, GH, Endangered, and Threatened) should have: 
+## 8. Element Occurrences throughout their range
 ```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Total number of EOs for imperiled, endangered, and threatened species per taxonomic group. EOs must be current (last observation date within the last 40 years).")}
 knitr::include_graphics(path="Output/fig.n_EOs.taxa.png")
 figure.num<-figure.num+1
@@ -189,12 +190,11 @@ figure.num<-figure.num+1
 ```{r, echo=FALSE}
 #table.num <- table.num+1
 #read.csv(paste0("Output/Subnational_EO_Summary_", Sys.Date(), ".csv")) %>%
+#read.csv(paste0("Output/Subnational_EO_Summary_2025-03-24.csv")) %>%
 #  kable(format = "pipe", caption = paste0("Table ", table.num, ". Subnational EO Summary"))
 ```
 
-
-### 8a. All imperiled species should have element occurrences
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of elements with at least one current EO. EOs must have been observed within the last 40 years.")}
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of imperiled elements with at least one current EO. Imperiled elements are globally ranked G1 or G2, are listed under the US Endangered Species Act, or have a COSEWIC status of Threatened or Endangered. EOs must have been observed within the last 40 years.")}
 knitr::include_graphics(path="Output/fig.Elements_with_EOs.taxa.png")
 figure.num<-figure.num+1
 ```
@@ -204,29 +204,99 @@ knitr::include_graphics(path="Output/map.Proportion_Species_with_EOs.subnation.p
 figure.num<-figure.num+1
 ```
 
-### 8b. Species should have current element occurrences in every subnation in which the species occurs
-```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of species elements with current Element occurrences available in all subnations in which the element occurs (regularly and confidently) and is native.")}
+## 9. Current element occurrences in every subnation in which the species occurs
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of imperiled species elements with current Element Occurrences available in all subnations in which the element occurs (regularly and confidently) and is native.")}
 knitr::include_graphics(path="Output/fig.EOs_for_all_Subnations.taxa.png")
 figure.num<-figure.num+1
 ```
 
-### 8c. Element Occurrences should have valid last observation dates
-- Fig xx. Proportion of EOs (with confident species identification, not extirpated) for imperiled (G1-G2), endangered, and threatened  (according to US ESA or COSEWIC) species with valid observation dates. Valid observation dates contain a 4 digit year in the text date field. (exists in d_last_obs_year table)
+## 10. Element Occurrences should have valid last observation dates
 
-### 8d. Element Occurrences should have valid EO ranks
-- Fig xx. Proportion of EOs with valid ranks.
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled (G1-G2), endangered, and threatened  (according to US ESA or COSEWIC) species with valid observation dates.")}
+knitr::include_graphics(path="Output/fig.EOs_with_Dates.taxa.png")
+figure.num<-figure.num+1
+```
 
-### 8d. Elements Occurrences should have been visited within the last 10 years
-- Fig xx. Histogram of element occurrences (with confident identification, not extirpated) for at-risk (G1-G3) species with last observation dates within the last 5, 10, 20, and 30+ years.
-- Fig xx. Histogram of element occurrences (with confident identification, not extirpated) for imperiled (G1-G2), endangered, and threatened (US ESA and COSEWIC) species with last observation dates within the last 5, 10, 20, and 30+ years.
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled, endangered, and threatened species with valid last observation dates.")}
+knitr::include_graphics(path="Output/map.Proportion_EOs_with_Dates.subnation.png")
+figure.num<-figure.num+1
+```
 
-### 8e. Element Occurrences should have representational accuracy information
-- Fig xx. Proportion of current EOs with accuracy information. Current EOs have confirmed identification, been observed in the last 40 years, and are not extirpated. EOs with accuracy information have a non-NULL value for representational accuracy, or precision (CA).
+## 11. Element Occurrences should have valid EO ranks
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled (G1-G2), endangered, and threatened  (according to US ESA or COSEWIC) species with valid ranks.")}
+knitr::include_graphics(path="Output/fig.EOs_with_Rank.taxa.png")
+figure.num<-figure.num+1
+```
 
-## 9. Communities should have EOs
-- Proportion of all NVC groups with EOs
-- Proportion of G1-G2 groups with EOs
-- Proportion of subnations with community EOs 
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled, endangered, and threatened species with valid ranks.")}
+knitr::include_graphics(path="Output/map.Proportion_EOs_Ranked.subnation.png")
+figure.num<-figure.num+1
+```
+
+## 12. Elements Occurrences should have been visited within the last 10 years
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Number of EOs for imperiled, endangered, and threatened species that have been visited in the last x years.")}
+knitr::include_graphics(path="Output/fig.EOs.Lobs.hist.png")
+figure.num<-figure.num+1
+```
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled, endangered, and threatened species that have been visited in the last 10 years per subnation.")}
+knitr::include_graphics(path="Output/map.Proportion_EOs_10_Years_Current.subnation.png")
+figure.num<-figure.num+1
+```
+
+## 13. Element Occurrences should have representational accuracy information
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled (G1-G2), endangered, and threatened  (according to US ESA or COSEWIC) species with representational accuracy.")}
+knitr::include_graphics(path="Output/fig.EOs_with_Accuracy.taxa.png")
+figure.num<-figure.num+1
+```
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of EOs for imperiled, endangered, and threatened species that have representational accuracy per subnation.")}
+knitr::include_graphics(path="Output/map.Proportion_EOs_with_Accuracy.subnation.png")
+figure.num<-figure.num+1
+```
+
+# Ecosystems should have Element Occurrences:
+## 14. All IVC groups should have Element Occurrences
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Number of IVC groups per subnation.")}
+knitr::include_graphics(path="Output/map.Number_of_IVC_Groups.subnation.png")
+figure.num<-figure.num+1
+```
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of IVC groups with EOs per subnation.")}
+knitr::include_graphics(path="Output/map.Proportion_of_Groups_with_EOs.subnation.png")
+figure.num<-figure.num+1
+```
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Number of Imperiled (G1/2) IVC groups per subnation.")}
+knitr::include_graphics(path="Output/map.Number_of_Imperiled_IVC_Groups.subnation.png")
+figure.num<-figure.num+1
+```
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of Imperiled (G1/2) IVC groups with EOs per subnation.")}
+knitr::include_graphics(path="Output/map.Proportion_of_Imperiled_Groups_with_EOs.subnation.png")
+figure.num<-figure.num+1
+```
+
+## 15. All subnations should have Ecosystem EOs
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Number of Ecosystem EOs per subnation.")}
+knitr::include_graphics(path="Output/map.Number_of_Ecosystem_EOs.subnation.png")
+figure.num<-figure.num+1
+```
+
+
+## 16. Ecosystem EOs should have valid and current observation dates
 - Proportion of EOs that are up to date (EOs visited within last 40 years), by subnation 
-- Proportion of ecosystem EOs that are crosswalked to NVC group, by state
+
+## 17. Ecosystem EOs should be crosswalked to IVC groups
+
+```{r, echo=FALSE, fig.cap= paste("Figure ", figure.num, ". Proportion of Ecosystem EOs crosswalked to Groups per subnation.")}
+knitr::include_graphics(path="Output/map.Proportion_of_Ecosystem_EOs_Crosswalked_to_Groups.subnation.png")
+figure.num<-figure.num+1
+```
+
+## 18. Ecosystem EOs should have a valid condition rank
 - Proportion of EOs that have a condition rank
